# cmake-dll-example

./: CMakeLists.txt  README.md
myapp/: CMakeLists.txt  main.cpp
mylibrary/: CMakeLists.txt  mylibrary.cpp  mylibrary.h
